--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.2",
     "framer-motion": "^12.4.10",
     "next": "15.2.1",
     "react": "^19.0.0",
